--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "3.0.0": "^3.0.0",
     "bulma": "^0.7.0",
-    "gatsby": "^2.0.66",
-    "gatsby-image": "^2.0.23",
+    "gatsby": "^2.0.91",
+    "gatsby-image": "^2.0.26",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^3.0.9",
     "gatsby-plugin-purgecss": "^3.1.0",
@@ -16,18 +17,20 @@
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-relative-images": "^0.2.1",
-    "gatsby-source-filesystem": "^2.0.12",
-    "gatsby-transformer-remark": "^2.1.15",
+    "gatsby-source-filesystem": "^2.0.16",
+    "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.9",
+    "immutable": "^3.8.2",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms": "^2.3.2",
+    "netlify-cms": "^2.3.3",
     "node-sass": "^4.11.0",
     "parcel-bundler": "^1.9.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
+    "redux": "^4.0.1",
     "uuid": "^3.2.1"
   },
   "keywords": [
