--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,7 @@
   force = true
 
 [[redirects]]
-from = "https://affectionate-yalow-1e0141.netlify.com/portofolio/index.html"
-to = "https://www.ionvarsescu.tk/portofolio/index.html"
+from = "https://affectionate-yalow-1e0141.netlify.com/portofolio/"
+to = "/portofolio/:splat"
 status = 200
 force = false
