--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,7 @@
   force = true
 
 [[redirects]]
-from = "https://portofolio-ion-varsescu.netlify.com/*"
+from = "https://portofolio-ion-varsescu.netlify.com"
 to = "https://www.ionvarsescu.tk/portofolio/:splat"
 status = 301
 force = true
