--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,19 @@
   force = true
 
 [[redirects]]
-from = "https://portofolio-ion-varsescu.netlify.com"
-to = "https://www.ionvarsescu.tk/portofolio/:splat"
+from = "https://portofolio-ion-varsescu.netlify.com/index.html"
+to = "https://www.ionvarsescu.tk/portofolio/index.html"
 status = 301
 force = true
+
+[[redirects]]
+from = "https://portofolio-ion-varsescu.netlify.com/index.html"
+to = "https://www.ionvarsescu.tk/portofolio/index.html"
+status = 200
+force = true
+
+[[redirects]]
+from = "https://portofolio-ion-varsescu.netlify.com/index.html"
+to = "https://www.ionvarsescu.tk/portofolio/index.html"
+status = 200
+force = false
