made portofolio-1-local and added redirect for the second github repo

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,10 @@
   to = "https://www.ionvarsescu.tk/:splat"
   status = 301
   force = true
+
+
+[[redirects]]
+  from = "https://portofolio-ion-varsescu.netlify.com/*"
+  to = "https://www.ionvarsescu.tk/portofolio/:splat"
+  status = 200
+  force = true
