--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@
 
 
 [[redirects]]
-  from = "https://portofolio-ion-varsescu.netlify.com/*"
-  to = "https://www.ionvarsescu.tk/portofolio/:splat"
+  from = "/portofolio/*"
+  to = "https://portofolio-ion-varsescu.netlify.com/:splat"
   status = 200
   force = true
