added 301 redirect to portofolio

--- a/netlify.toml
+++ b/netlify.toml
@@ -17,3 +17,9 @@
   to = "https://portofolio-ion-varsescu.netlify.com/:splat"
   status = 200
   force = true
+
+  [[redirects]]
+  from = "https://portofolio-ion-varsescu.netlify.com/*"
+  to = "https://portofolio.ionvarsescu.tk/:splat"
+  status = 301
+  force = true
