--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "author": "Austin Green",
   "dependencies": {
     "3.0.0": "^3.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bulma": "^0.7.0",
     "gatsby": "^2.0.91",
     "gatsby-image": "^2.0.26",
