updated portofolio link to subdomain

--- a/netlify.toml
+++ b/netlify.toml
@@ -11,15 +11,11 @@
   status = 301
   force = true
 
-[[redirects]]
-  from = "https://portofolio-ion-varsescu.netlify.com/*"
-  to = "https://portofolio.ionvarsescu.tk/:splat"
-  status = 301
-  force = true
 
-[[redirects]]
-  from = "/portofolio/*"
-  to = "https://portofolio-ion-varsescu.netlify.com/:splat"
-  status = 200
-  force = true
+# not needed in this project:
+# [[redirects]]
+#  from = "/portofolio/*"
+#  to = "https://portofolio-ion-varsescu.netlify.com/:splat"
+#  status = 200
+#  force = true
 
