--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gatsby-plugin-purgecss": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-plugin-sharp": "^2.0.20",
+    "gatsby-plugin-sitemap": "^2.0.5",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-relative-images": "^0.2.1",
@@ -39,6 +40,7 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "redux": "^4.0.1",
+    "sharp": "^0.21.3",
     "uuid": "^3.2.1"
   },
   "keywords": [
