--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
+  "name": "Ion Varsescu - Blog and Portofolio",
+  "description": "Example Gatsby, and Netlify CMS project (gatsby-starter-netlify-cms - Austin Green") ,
   "version": "1.1.3",
-  "author": "Austin Green",
+  "author": "Ion Varsescu",
   "dependencies": {
     "3.0.0": "^3.0.0",
     "babel-cli": "^6.26.0",
