--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Ion Varsescu - Blog and Portofolio",
-  "description": "Example Gatsby, and Netlify CMS project (gatsby-starter-netlify-cms - Austin Green") ,
+  "description": "Example Gatsby, and Netlify CMS project (gatsby-starter-netlify-cms - Austin Green)" ,
   "version": "1.1.3",
   "author": "Ion Varsescu",
   "dependencies": {
