name in package.json only lowercase no spaces

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ion Varsescu - Blog and Portofolio",
+  "name": "ion_varsescu_blog_and_portofolio",
   "description": "Example Gatsby, and Netlify CMS project (gatsby-starter-netlify-cms - Austin Green)" ,
   "version": "1.1.3",
   "author": "Ion Varsescu",
