--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "ion_varsescu_blog_and_portofolio",
-  "description": "Example Gatsby, and Netlify CMS project (gatsby-starter-netlify-cms - Austin Green)" ,
+  "name": "gatsby-starter-netlify-cms",
+  "description": "Example Gatsby, and Netlify CMS project (gatsby-starter-netlify-cms - Austin Green)",
   "version": "1.1.3",
   "author": "Ion Varsescu",
   "dependencies": {
     "3.0.0": "^3.0.0",
+    "ajv": "^6.12.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
@@ -14,7 +15,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bulma": "^0.7.0",
-    "gatsby": "^2.0.91",
+    "express": "^4.16.2",
+    "gatsby": "^2.21.13",
     "gatsby-image": "^2.0.26",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^3.0.9",
@@ -33,6 +35,7 @@
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms": "^2.3.3",
+    "netlify-cms-lib-widgets": "^1.3.0",
     "node-sass": "^4.11.0",
     "parcel-bundler": "^1.9.4",
     "prop-types": "^15.6.0",
@@ -40,6 +43,7 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "redux": "^4.0.1",
+    "sass-loader": "^7.1.0",
     "sharp": "^0.21.3",
     "uuid": "^3.2.1"
   },
